--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
   <h1>3-Face Flashcards .csv Creator</h1>
   <h2 class="subtitle1">Create your own .csv 3-face flashcards</h2>
-  <h3 class="subtitle2">Made entirely in ChatGPT (super OP) from Panana Astley</h3>
+  <h3 class="subtitle2">Made entirely in ChatGPT (super OP) from Panana Astley (update)</h3>
   <div class="container">
     <div class="sidebar">
       <input type="file" id="csvFile" accept=".csv"><br><br>
