--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>3-Face Flashcards .csv Creator</title>
   <style>
+	.tip {
+  margin-top: 20px;
+  font-size: 0.9rem;
+  color: #94a3b8; /* soft gray */
+}
+
 	.subtitle1 {
 	font-size: 1rem;
 	margin-bottom: 15px;
@@ -305,5 +311,10 @@
 	  }
 	});
   </script>
+	<div class="tip">
+	  💡 Tip: Use <strong>Enter</strong> to add a new card quickly.  
+	  Press F5 after "Clear all" for the list to be completely reset
+	  If you don't there would be bug or not idk, but i wont fix :3
+	</div>
 </body>
 </html>
