--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
 	});
   </script>
 	<div class="tip">
-	  💡 Tip: Use <strong>Enter</strong> to add a new card quickly.  
-	  Press F5 after "Clear all" for the list to be completely reset
-	  If you don't there would be bug or not idk, but i wont fix :3
+	  💡 Tip: Use <strong>Enter</strong> to add a new card quickly.  \n
+	  Press F5 after "Clear all" for the list to be completely reset \n
+	  If you don't there would be bug or not idk, but i wont fix :3  \n
 	</div>
 </body>
 </html>
