--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <body>
   <h1>3-Face Flashcards .csv Creator</h1>
   <h2 class="subtitle1">Create your own .csv 3-face flashcards</h2>
-  <h3 class="subtitle2">Made entirely in ChatGPT (super OP) from Panana Astley (update)</h3>
+  <h3 class="subtitle2">Made entirely in ChatGPT (super OP) from Panana Astley</h3>
   <div class="container">
     <div class="sidebar">
       <input type="file" id="csvFile" accept=".csv"><br><br>
@@ -312,9 +312,9 @@
 	});
   </script>
 	<div class="tip">
-	  💡 Tip: Use <strong>Enter</strong> to add a new card quickly.  \n
-	  Press F5 after "Clear all" for the list to be completely reset \n
-	  If you don't there would be bug or not idk, but i wont fix :3  \n
+	  💡 Tip: Use <strong>Enter</strong> to add a new card quickly.
+	  Press F5 after "Clear all" for the list to be completely reset 
+	  (If you don't there would be bug or not idk, but i wont fix :3)
 	</div>
 </body>
 </html>
