--- a/index.html
+++ b/index.html
@@ -324,5 +324,8 @@
 	  Press F5 after "Clear all" for the list to be completely reset 
 	  (If you don't there would be bug or not idk, but i wont fix :3)
 	</div>
+	<div class="tip">
+	  📝Note that if you want to import a new <strong>set</strong> of cards, "Clear all" before importing or it will add up instead
+	</div>
 </body>
 </html>
