--- a/index.html
+++ b/index.html
@@ -400,11 +400,11 @@
   </script>
 	<div class="tip">
 	  💡 Tip: Check the <strong>key bindings</strong> below.
-	  Also, press F5 after "Clear all" for the list to be completely reset 
+	  Also, press <strong>F5</strong> after <strong>"Clear all"</strong> for the list to be completely reset 
 	</div>
 	<div class="tip">
 	  📝Note that if you want to import a new <strong>set</strong> of cards, 
-	  "Clear all" before importing or it will add up to current set instead
+	  <strong>"Clear all"</strong> before importing or it will add up to current set instead
 	</div>
 	<div class="tipleftheading">
 	  Key bindings:
