--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>3-Face Flashcards .csv Creator</title>
   <style>
+  .top-left-links {
+  position: fixed;
+  top: 15px;
+  left: 20px;
+  display: flex;
+  gap: 10px;
+  z-index: 1000;
+}
+
+.top-left-links button {
+  padding: 6px 12px;
+  border-radius: 6px;
+  border: none;
+  background: #0284c7;
+  color: white;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.top-left-links button:hover {
+  background: #0369a1;
+}
+
 	.lol {
 	  font-size: 0.7rem;
 	  color: #94a3b8; 
@@ -140,9 +163,14 @@
   </style>
 </head>
 <body>
-  <h1>3-Face Flashcards .csv Creator</h1>
+<h0 class="top-left-links">
+  <button id="githubBtn">My GitHub (this website)</button> 
+  <button id="quizBtn">Quiz using these flashcards</button>
+</h0>
+  <h1><br>3-Face Flashcards .csv Creator</h1>
   <h2 class="subtitle1">Create your own .csv 3-face flashcards</h2>
-  <h3 class="subtitle2">Made entirely in ChatGPT (super OP) from Panana Astley</h3>
+  <h3 class="subtitle2">Made entirely in ChatGPT (super OP) from Panana Astley</h3>  
+  <h4 class="tipleft" >💡 Tips are below the page. Scroll down to read</h4>
   <div style="width:100%; text-align:left; margin-left: 90px;">
 	<button id="toggleListBtn">Hide List</button>
   </div>
@@ -178,6 +206,14 @@
   </div>
 
   <script>
+  document.getElementById("githubBtn").addEventListener("click", () => {
+  window.open("https://github.com/xXPartOfMeXx/3faceflashcard-creator", "_blank");
+});
+
+document.getElementById("quizBtn").addEventListener("click", () => {
+  window.open("https://xxpartofmexx.github.io/quiz-flashcard-3-sided-chatgpt", "_blank");
+});
+
 	  const toggleBtn = document.getElementById("toggleListBtn");
 	  const cardList = document.getElementById("cardList");
 
@@ -280,15 +316,517 @@
     }
 
     function addNewCard() {
-      flashcards.push({
-        word: document.getElementById("word").value,
-        antonym: document.getElementById("antonym").value,
-        meaning: document.getElementById("meaning").value
-      });
-      currentCard = flashcards.length - 1;
+  const wordInput = document.getElementById("word");
+  const antonymInput = document.getElementById("antonym");
+  const meaningInput = document.getElementById("meaning");
+
+  const word = wordInput.value.trim();
+  const antonym = antonymInput.value.trim();
+  let meaning = meaningInput.value.trim();
+
+  // ✅ if meaning is empty, replace with "-"
+  if (!meaning) meaning = "-";
+
+  flashcards.push({ word, antonym, meaning });
+  localStorage.setItem("flashcards", JSON.stringify(flashcards));
+
+  currentCard = flashcards.length - 1;
+  currentFace = 0;
+  updateCard();
+
+  // ✅ clear inputs and refocus for quick entry
+  wordInput.value = "";
+  antonymInput.value = "";
+  meaningInput.value = "";
+  wordInput.focus();
+}
+
+
+    function deleteCurrentCard() {
+      if (flashcards.length === 0) return;
+      flashcards.splice(currentCard, 1);
+      if (currentCard >= flashcards.length) currentCard = flashcards.length - 1;
       saveFlashcards();
       updateCard();
     }
+
+    function clearAll() {
+      flashcards = [];
+      saveFlashcards();
+      updateCard();
+    }
+
+    function shuffleCards() {
+      for (let i = flashcards.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [flashcards[i], flashcards[j]] = [flashcards[j], flashcards[i]];
+      }
+      currentCard = 0;
+      updateCard();
+    }
+
+    function renderList() {
+  cardListEl.innerHTML = "";
+  flashcards.forEach((c, i) => {
+    const div = document.createElement("div");
+    div.className = "card-item";
+    div.innerHTML = `<strong>${c.word || "[Word]"}</strong>${c.antonym || "[Antonym]"}<br><em>${c.meaning || "[Meaning]"}</em>`;
+    div.innerHTML = `<strong>${c.word || "[Word]"}</strong>${c.antonym || "[Antonym]"}<br><em>${c.meaning || "[Meaning]"}</em>`;
+    div.innerHTML = `<strong>${c.word || "[Word]"}</strong>${c.antonym || "[Antonym]"}<br><em>${c.meaning || "[Meaning]"}</em>`;
+    div.innerHTML = `<strong>${c.word || "[Word]"}</strong>${c.antonym || "[Antonym]"}<br><em>${c.meaning || "[Meaning]"}</em>`;
+    div.innerHTML = `<strong>${c.word || "[Word]"}</strong>${c.antonym || "[Antonym]"}<br><em>${c.meaning || "[Meaning]"}</em>`;
+    div.innerHTML = `<strong>${c.word || "[Word]"}</strong>${c.antonym || "[Antonym]"}<br><em>${c.meaning || "[Meaning]"}</em>`;
+    
+    // ✅ use addEventListener instead of div.onclick
+    div.addEventListener("click", () => {
+      currentCard = i;
+      currentFace = 0;
+      updateCard();
+    });
+
+    cardListEl.appendChild(div);
+  });
+}
+	  
+    function saveFlashcards() {
+      localStorage.setItem("flashcards", JSON.stringify(flashcards));
+    }
+
+    // CSV Import
+    document.getElementById("csvFile").addEventListener("change", function(e) {
+      const file = e.target.files[0];
+      if (!file) return;
+      const reader = new FileReader();
+      reader.onload = function(event) {
+        const text = event.target.result;
+        const lines = text.split(/\r?\n/);
+        let imported = [];
+        for (let i = 0; i < lines.length; i++) {
+          const cols = lines[i].split(",");
+          if (cols.length >= 3) {
+            const w = cols[0].trim();
+            const a = cols[1].trim();
+            const m = cols[2].trim();
+            if (w.toLowerCase() === "word" && a.toLowerCase().includes("antonym") && m.toLowerCase().includes("meaning")) {
+              continue;
+            }
+            imported.push({ word: w, antonym: a, meaning: m });
+          }
+        }
+        if (imported.length > 0) {
+          flashcards = flashcards.concat(imported);
+          saveFlashcards();
+          currentCard = 0;
+          currentFace = 0;
+          updateCard();
+        }
+      };
+      reader.readAsText(file);
+    });
+
+    // CSV Export
+    function exportCSV() {
+      if (flashcards.length === 0) return;
+      let csvContent = "";
+      flashcards.forEach(card => {
+        csvContent += `${card.word},${card.antonym},${card.meaning}\n`;
+      });
+      const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
+      const url = URL.createObjectURL(blob);
+      const link = document.createElement("a");
+      link.setAttribute("href", url);
+      link.setAttribute("download", "flashcards.csv");
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    }
+
+    updateCard();
+	  
+	document.addEventListener("keydown", function (e) {
+	  if (e.key === "Enter") {
+	    e.preventDefault(); // prevent form submit/reload
+	    addNewCard();
+	  }
+	});
+  </script>
+	<div class="tip">
+	  💡 Tip: Check the <strong>key bindings</strong> below.
+	  Also, press <strong>F5</strong> after <strong>"Clear all"</strong> for the list to be completely reset 
+	</div>
+	<div class="tip">
+	  📝Note that if you want to import a new <strong>set</strong> of cards, 
+	  <strong>"Clear all"</strong> before importing or it will add up to current set instead
+	</div>
+	<div class="tipleftheading">
+	  Key bindings:
+	</div>
+	<div class="tipleft">
+	  <strong>Left arrow ◀: </strong>Previous card
+	</div>
+  <div class="tipleft">
+	  <strong>Enter: </strong>Add new card
+	</div>
+	<div class="tipleft">
+	  <strong>Right arrow ▶: </strong>Next card
+	</div>
+	<div class="tipleft">
+	  <strong>Space: </strong>Flip
+	</div>
+	<div class="tipleft">
+	  <strong>S: </strong>Shuffle
+	</div>
+	<div class="tipleft">
+	  <strong>Delete: </strong>Delete current card
+	</div>
+	<div class="lol">
+	 I forking love ChatGPT
+	</div>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="icon" type="image/png" href="icon.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>3-Face Flashcards .csv Creator</title>
+  <style>
+  .top-left-links {
+  position: fixed;
+  top: 15px;
+  left: 20px;
+  display: flex;
+  gap: 10px;
+  z-index: 1000;
+}
+
+.top-left-links button {
+  padding: 6px 12px;
+  border-radius: 6px;
+  border: none;
+  background: #0284c7;
+  color: white;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.top-left-links button:hover {
+  background: #0369a1;
+}
+
+	.lol {
+	  font-size: 0.7rem;
+	  color: #94a3b8; 
+	}
+	.tip {
+	  margin-top: 20px;
+	  font-size: 0.9rem;
+	  color: #94a3b8; 
+	}
+	.tipleftheading {
+	  margin-top: 20px;
+	  margin-left: 40px;
+	  font-style: italic;
+	  font-size: 1rem;
+	  color: #FEB21A;
+	  text-align: left;
+	  align-self: flex-start;
+	  width: 100%;
+	  max-width: 1200px;
+	  box-sizing: border-box;
+	  padding-left: 20px;
+	}
+		.tipleft {
+	  margin-top: 20px;
+	  margin-left: 40px;
+	  font-size: 1rem;
+	  color: #FEB21A;
+	  text-align: left;
+	  align-self: flex-start;
+	  width: 100%;
+	  max-width: 1200px;
+	  box-sizing: border-box;
+	  padding-left: 20px;
+	}
+
+	.subtitle1 {
+	font-size: 1rem;
+	margin-bottom: 15px;
+}
+	.subtitle2 {
+  font-size: 0.8rem;
+  font-style: italic;
+  color: #FFFB00;
+  margin-bottom: 15px;
+}
+    body {
+      font-family: Arial, sans-serif;
+      background: #0f172a;
+      color: #f8fafc;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      margin-bottom: 10px;
+    }
+    .container {
+      display: flex;
+      gap: 20px;
+      width: 100%;
+      max-width: 1200px;
+    }
+    .sidebar, .main {
+      background: #1e293b;
+      border-radius: 10px;
+      padding: 20px;
+      flex: 1;
+    }
+    .sidebar {
+      max-width: 350px;
+    }
+    .card-list {
+	  display: flex;
+	  flex-direction: column;
+	  gap: 10px;
+	  max-height: 300px;   /* limit area */
+	  overflow-y: auto;    /* scroll if too tall */
+	  padding-right: 5px;  /* spacing so scrollbar isn’t over text */
+	}
+    .card-item {
+      padding: 10px;
+      background: #334155;
+      border-radius: 6px;
+    }
+    .card-item strong {
+      display: block;
+    }
+    .flashcard {
+      width: 100%;
+      height: 200px;
+      background: #0f172a;
+      border: 2px solid #334155;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.6rem;
+      margin-bottom: 10px;
+    }
+    button {
+      padding: 8px 15px;
+      margin: 5px;
+      border: none;
+      border-radius: 6px;
+      background: #0284c7;
+      color: white;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #0369a1;
+    }
+    input {
+      padding: 6px;
+      border-radius: 4px;
+      border: 1px solid #475569;
+      background: #1e293b;
+      color: white;
+    }
+    .editor {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .editor input {
+      flex: 1;
+    }
+  </style>
+</head>
+<body>
+<h0 class="top-left-links">
+  <button id="githubBtn">My GitHub (this website)</button> 
+  <button id="quizBtn">Quiz using these flashcards</button>
+</h0>
+  <h1><br>3-Face Flashcards .csv Creator</h1>
+  <h2 class="subtitle1">Create your own .csv 3-face flashcards</h2>
+  <h3 class="subtitle2">Made entirely in ChatGPT (super OP) from Panana Astley</h3>  
+  <h4 class="tipleft" >💡 Tips are below the page. Scroll down to read</h4>
+  <div style="width:100%; text-align:left; margin-left: 90px;">
+	<button id="toggleListBtn">Hide List</button>
+  </div>
+  <div class="container">
+    <div class="sidebar">
+      <input type="file" id="csvFile" accept=".csv"><br><br>
+      <div class="card-list" id="cardList"></div>
+      <button onclick="clearAll()">Clear all</button>
+      <button onclick="shuffleCards()">Shuffle</button>
+      <button onclick="exportCSV()">Export CSV</button>
+    </div>
+
+    <div class="main">
+      <div class="flashcard" id="flashcard">No cards yet</div>
+      <div>
+        <button onclick="prevCard()">◀ Previous card</button>
+        <button onclick="flipCard()">Flip</button>
+        <button onclick="nextCard()">Next card ▶</button>
+      </div>
+
+      <div class="editor">
+        <input type="text" id="word" placeholder="Face 1">
+        <input type="text" id="antonym" placeholder="Face 2">
+        <input type="text" id="meaning" placeholder="Face 3">
+      </div>
+      <div>
+        <button onclick="addNewCard()">Add New Card</button>
+        <button onclick="saveCard()">Save</button>
+        <button onclick="deleteCurrentCard()">Delete</button>
+      </div>
+      <div id="status"></div>
+    </div>
+  </div>
+
+  <script>
+  document.getElementById("githubBtn").addEventListener("click", () => {
+  window.open("https://github.com/xXPartOfMeXx/3faceflashcard-creator", "_blank");
+});
+
+document.getElementById("quizBtn").addEventListener("click", () => {
+  window.open("https://xxpartofmexx.github.io/quiz-flashcard-3-sided-chatgpt", "_blank");
+});
+
+	  const toggleBtn = document.getElementById("toggleListBtn");
+	  const cardList = document.getElementById("cardList");
+
+	  toggleBtn.addEventListener("click", () => {
+	  if (cardList.style.display === "none") {
+		cardList.style.display = "flex"; // show it again
+		toggleBtn.textContent = "Hide List";
+	} else {
+		cardList.style.display = "none"; // hide it
+		toggleBtn.textContent = "Show List";
+	  }
+	});
+
+		// Keyboard controls
+	document.addEventListener("keydown", function(e) {
+	  // Ignore if typing in input or textarea
+	  if (document.activeElement.tagName === "INPUT" || document.activeElement.tagName === "TEXTAREA") {
+	    return;
+	  }
+	  if (e.code === "KeyS") {
+	    e.preventDefault();
+	    shuffleCards();   // shuffle
+	  }
+	  if (e.code === "Delete") {
+	    e.preventDefault();
+	    deleteCurrentCard();   // delete
+	  }
+	  if (e.code === "ArrowLeft") {
+	    e.preventDefault();
+	    prevCard();   // go to previous card
+	  }
+	  if (e.code === "ArrowRight") {
+	    e.preventDefault();
+	    nextCard();   // go to next card
+	  }
+	  if (e.code === "Space") {
+	    e.preventDefault();
+	    flipCard();   // flip faces
+	  }
+	});
+
+    let flashcards = JSON.parse(localStorage.getItem("flashcards")) || [];
+    let currentCard = 0;
+    let currentFace = 0;
+
+    const flashcardEl = document.getElementById("flashcard");
+    const cardListEl = document.getElementById("cardList");
+
+    function updateCard() {
+      if (flashcards.length === 0) {
+        flashcardEl.textContent = "No cards yet";
+        return;
+      }
+      const card = flashcards[currentCard];
+      if (currentFace === 0) flashcardEl.textContent = card.word;
+      if (currentFace === 1) flashcardEl.textContent = card.antonym;
+      if (currentFace === 2) flashcardEl.textContent = card.meaning;
+      document.getElementById("word").value = card.word;
+      document.getElementById("antonym").value = card.antonym;
+      document.getElementById("meaning").value = card.meaning;
+      renderList();
+    }
+
+    function flipCard() {
+      if (flashcards.length === 0) return;
+      currentFace = (currentFace + 1) % 3;
+      updateCard();
+    }
+
+    function prevFace() {
+      if (flashcards.length === 0) return;
+      currentFace = (currentFace + 2) % 3;
+      updateCard();
+    }
+
+	function prevCard() {
+	  if (flashcards.length === 0) return;
+	  currentCard = (currentCard - 1 + flashcards.length) % flashcards.length;
+	  currentFace = 0; // reset to Word when switching cards
+	  updateCard();
+	}
+
+
+    function nextCard() {
+      if (flashcards.length === 0) return;
+      currentCard = (currentCard + 1) % flashcards.length;
+      currentFace = 0;
+      updateCard();
+    }
+
+    function saveCard() {
+      if (flashcards.length === 0) return;
+      flashcards[currentCard] = {
+        word: document.getElementById("word").value,
+        antonym: document.getElementById("antonym").value,
+        meaning: document.getElementById("meaning").value
+      };
+      saveFlashcards();
+      updateCard();
+    }
+
+    function addNewCard() {
+  const wordInput = document.getElementById("word");
+  const antonymInput = document.getElementById("antonym");
+  const meaningInput = document.getElementById("meaning");
+
+  const word = wordInput.value.trim();
+  const antonym = antonymInput.value.trim();
+  let meaning = meaningInput.value.trim();
+
+  // ✅ if meaning is empty, replace with "-"
+  if (!meaning) meaning = "-";
+
+  flashcards.push({ word, antonym, meaning });
+  localStorage.setItem("flashcards", JSON.stringify(flashcards));
+
+  currentCard = flashcards.length - 1;
+  currentFace = 0;
+  updateCard();
+
+  // ✅ clear inputs and refocus for quick entry
+  wordInput.value = "";
+  antonymInput.value = "";
+  meaningInput.value = "";
+  wordInput.focus();
+}
+
 
     function deleteCurrentCard() {
       if (flashcards.length === 0) return;
